@@ -82,7 +82,7 @@ AUTHOR
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-    © 2024 Michal Josef Špaček
+    © 2024-2025 Michal Josef Špaček
 
     BSD 2-Clause License
 
